[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "sst_gui"
version = "0.1.0"
description = "SST1 GUI"
authors = [
    { email = "ctitus@bnl.gov" },
]
requires-python = ">=3.7"
dependencies = ["bluesky_widgets", "qtpy", "ucal", "sst_base", "sst_funcs"]

[project.urls]
homepage = "https://github.com/NSLS-II-SST/sst-gui"  # Replace with your project's homepage

[project.scripts]
sst-gui = "sst_gui.main:main"
sst-convert-config = "sst_gui.autoconf:main"
sst-gui-test = "sst_gui.testScaffolding:main"
sst-edit-config = "sst_gui.confEdit:main"

[project.optional-dependencies]