[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "sst_gui"
version = "0.1.0"
description = "SST1 GUI"
authors = [
    { email = "ctitus@bnl.gov" },
]
requires-python = ">=3.7"
dependencies = ["bluesky_widgets", "qtpy", "ucal", "sst_base", "sst_funcs"]

[project.urls]
homepage = "https://github.com/NSLS-II-SST/sst-gui"  # Replace with your project's homepage

[project.scripts]
sst-gui = "sst_gui.main:main"
sst-convert-config = "sst_gui.autoconf:main"
sst-gui-test = "sst_gui.testScaffolding:main"
sst-edit-config = "sst_gui.confEdit:main"

[project.optional-dependencies]

[project.entry-points."sst_gui.plans"]
sst-gui-scan = "sst_gui.plans.scanPlan:ScanPlanWidget"
sst-gui-move = "sst_gui.plans.movePlan:MovePlanWidget"
sst-gui-xas = "sst_gui.plans.xasPlan:XASPlanWidget"

[project.entry-points."sst_gui.tabs"]
sst-gui-plans = "sst_gui.tabs.newPlanTab:PlanTabWidget"
sst-gui-motors = "sst_gui.tabs.motorTab:MotorTab"
sst-gui-queue = "sst_gui.tabs.queueControlTab:QueueControlTab"
sst-gui-console = "sst_gui.tabs.consoleTab:IPythonConsoleTab"
sst-gui-samples = "sst_gui.widgets.samplelist:SampleTab"
sst-gui-monitor = "sst_gui.tabs.monitorTab:MonitorTab"